Fix Final checks pill width to not overlap Hard deadline cell

--- a/app/proposal/proposal.css
+++ b/app/proposal/proposal.css
@@ -157,7 +157,7 @@
   position: absolute;
   left: 3px;
   right: 0;
-  width: calc(300% + 2px);
+  width: calc(300% - 3px);
   z-index: 2;
   text-align: center;
 }
